// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__interactive 1`] = `
<DocumentFragment>
  <button
    class="button"
    type="button"
  >
    <div>
      瞭解更多
    </div>
  </button>
</DocumentFragment>
`;

exports[`with Icon 1`] = `
<DocumentFragment>
  <button
    class="button icon"
    type="button"
  >
    <div>
      <test-file-stub
        classname="icon"
      />
      瞭解更多
    </div>
  </button>
</DocumentFragment>
`;
